--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,15 @@
 }
 
 .grow:hover {
-  transform: scale(1.08);
-  z-index: 10;
+  transform: scale(1.2);
+}
+
+.incIndex {
+  z-index: 50;
+}
+
+.incIndex:hover {
+  z-index: 100;
 }
 
 .show {
