--- a/src/index.css
+++ b/src/index.css
@@ -12,19 +12,23 @@
 }
 
 .grow:hover {
-  transform: scale(1.2);
+  transform: scale(1.15);
 }
 
-.incIndex {
+.person {
+  position: relative;
   z-index: 50;
 }
 
-.incIndex:hover {
+.person:hover {
   z-index: 100;
 }
 
 .show {
-  animation: fadeIn 1.5s;
+  text-align: center;
+  font-size: 3.5rem;
+  font-weight: 900;
+  animation: fadeIn 0.5s;
 }
 
 @keyframes fadeIn {
@@ -34,5 +38,23 @@
 
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .person {
+    position: static;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .show {
+    font-size: 2.5rem;
+  }
+
+  .grow:hover {
+    transform: scale(1.05);
   }
 }
