--- a/src/index.css
+++ b/src/index.css
@@ -522,3 +522,25 @@ code {
 	width: 100%;
 	position: absolute;
 }
+
+
+/* Sponsor CSS */
+
+.sponsor img {
+    object-fit: contain;
+    width: 100%;
+    height: 100px;
+}
+
+
+.gallery {
+    background-color: #ffffff;
+    padding: 80px 0;
+}
+
+.gallery img {
+    background-color: #ff6f00;
+    padding: 15px;
+    width: 100%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
