Small changes to all pages

--- a/src/index.css
+++ b/src/index.css
@@ -534,7 +534,9 @@ code {
 
 
 .gallery {
-    background-color: #000000;
+	background-image: url("assets/bg2.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
     padding-top: 12%;
 }
 
@@ -542,25 +544,31 @@ code {
     background-color: #7b00ff;
     padding: 15px;
     width: 100%;
-    box-shadow: 0 0 15px rgba(255, 0, 230, 0.258);
+    /* box-shadow: 0 0 15px rgba(255, 0, 230, 0.258); */
+	overflow-x: hidden;
 }
 
-.scroll-eventscont {
+/* About TQ */
+
+.abouttaqneeqpage {
+	background-image: url("assets/bg2.jpg");
+}
+
+.scroll-c {
 	height: calc(100vh - 200px);
-	overflow-y: scroll;
 	position: absolute;
-	top: -60px;
+	top: 150px;
 	bottom: 0px;
 	left: 0px;
 	right: 0px;
 }
 
-.parenteventscont {
+.parentContainer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding: 1rem;
-	margin-top: 200px;
+	margin-top: 23px;
 	margin-left: 50px;
 	flex-wrap: wrap;
   }
@@ -591,9 +599,9 @@ code {
 
 span {
   font-family: 'Bebas Neue', cursive;
-  font-size: 3em;
+  font-size: 60px;
   position: absolute;
-  top: 7%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%,-50%);
   background-image: linear-gradient(rgb(123, 0, 255), rgb(123, 0, 255));
@@ -602,14 +610,22 @@ span {
   background-position: 100% 0%;
   transition: background-size .7s, background-position .5s ease-in-out;
   color: white;
-  margin-bottom: 500px;
 }
 
-span:hover {
+span:hover {	
   background-size: 100% 100%;
   background-position: 0% 100%;
   transition: background-position .7s, background-size .5s ease-in-out;
 }
+
+@media (max-width: 600px) {
+	span {
+	  font-size: 2rem;
+	  top: 20%;
+	  background-size: 100% 5px;
+	}
+  }
+  
 
 /* Schedule */
 
@@ -624,15 +640,20 @@ html {
 body {
 	background: #181818;
 	font-family: "Open Sans", sans-serif;
-	color: #525f7f;
+	color: #ffffff;
 }
 
-h2 {
-	margin: 5%;
-	padding-top: 200px;
+.scheduletext {
+	padding-top: 180px;
 	text-align: center;
-	font-size: 2rem;
+	font-size: 5rem;
 	color: white;
+}
+
+@media only screen and (max-width: 600px) {
+	.scheduletext {
+	font-size: 3rem; /* adjust as needed */
+	}
 }
 
 .timeline {
@@ -912,7 +933,6 @@ h2 {
 	pointer-events: none;
   }
   body {
-	background-color: #e6e5e1;
 	width: 100vw;
 	height: 100vh;
   }
@@ -923,6 +943,8 @@ h2 {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	margin-top: 15%;
+	padding-bottom: 8%;
   }
   .eventscont .zcard {
 	position: relative;
