Removed Reflections from events page to decrease lag

--- a/src/index.css
+++ b/src/index.css
@@ -654,7 +654,8 @@ body {
 	content: "";
 	width: 2px;
 	height: 100%;
-	background: #f6a4ec;
+	background: #6c2e84
+;
 	position: absolute;
 	top: 0%;
 	left: 50%;
@@ -668,7 +669,8 @@ body {
 	content: "";
 	width: 100%;
 	height: 2px;
-	background: #f6a4ec;
+	background: #6c2e84
+;
 	position: absolute;
 	right: 0;
 	z-index: -1;
@@ -698,7 +700,8 @@ body {
 }
 
 .timeline__event__date {
-	color: #f6a4ec;
+	color: white
+;
 	font-size: 1.5rem;
 	font-weight: 600;
 	background: #9251ac;
@@ -718,7 +721,8 @@ body {
 	padding: 20px;
 	align-self: center;
 	margin: 0 20px;
-	background: #f6a4ec;
+	background: #6c2e84
+;
 	border-radius: 100%;
 	width: 40px;
 	box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
@@ -737,7 +741,8 @@ body {
 	content: "";
 	width: 2px;
 	height: 100%;
-	background: #f6a4ec;
+	background: #6c2e84
+;
 	position: absolute;
 	top: 0%;
 	z-index: -1;
@@ -750,7 +755,8 @@ body {
 	content: "";
 	width: 100%;
 	height: 2px;
-	background: #f6a4ec;
+	background: #6c2e84
+;
 	position: absolute;
 	left: 0%;
 	z-index: -1;
@@ -1148,8 +1154,7 @@ body {
 	height: 100%;
 	object-fit: cover;
 
-	-webkit-box-reflect: below 2px linear-gradient(transparent, transparent, #0004);
-
+	
 	transform-origin: center;
 	transform: perspective(800px) rotateY(25deg);
 	transition: 0.5s;
@@ -1272,3 +1277,5 @@ body {
 	list-style: none;
 	padding: 16px 0px;
 }
+
+/* heading */
