--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 html {
-	overflow-x: hidden;
 	scroll-behavior: smooth;
 }
 
@@ -884,7 +883,7 @@ body {
 	}
 }
 
-/* Events */
+/* Workshops */
 
 i {
 	opacity: 0;
@@ -919,11 +918,17 @@ body {
 
 .eventscont .zcard {
 	position: relative;
-	width: 500px;
+	width: 1000px;
 	height: 200px;
 	background-color: #fff;
 	overflow: hidden;
-	margin-bottom: 4px;
+	margin-bottom: 50px;
+}
+
+@media (max-width: 768px) {
+	.eventscont .zcard {
+	width: 80%;
+	}
 }
 
 .eventscont .zcard:before {
@@ -1004,12 +1009,15 @@ body {
 
 .eventscont .zcard .pic {
 	z-index: 100;
-	width: 400px;
+	width: 900px;
 	height: 200px;
 	background-image: url("assets/arvr2.jpg");
-	background-size: 100% 100%;
+	background-size: 100%;
+	background-position: center;
 	filter: grayscale(100%);
 }
+
+
 
 .eventscont .zcard .social {
 	position: absolute;
@@ -1141,6 +1149,8 @@ body {
 	cursor: pointer;
 }
 
+
+
 /* events page */
 .container-event img {
 
@@ -1271,4 +1281,30 @@ body {
 .contents li {
 	list-style: none;
 	padding: 16px 0px;
+}
+
+
+/* video background */
+
+.bgvid {
+	position: fixed;
+	right: -32%;
+	bottom: -18%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	margin: auto;
+	z-index: -100;
+}
+
+.svid {
+	width: 100vh;
+	height: 100vh;
+	object-fit: cover;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: -1;
 }
