--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 @font-face {
@@ -1288,14 +1289,12 @@ body {
 	padding: 16px 0px;
 }
 
-<<<<<<< HEAD
-
 /* video background */
 
 .bgvid {
 	position: fixed;
 	right: -32%;
-	bottom: -18%;
+	bottom: -24%;
 	min-width: 100%;
 	min-height: 100%;
 	width: auto;
@@ -1314,6 +1313,4 @@ body {
 	bottom: 0;
 	z-index: -1;
 }
-=======
-/* heading */
->>>>>>> 32ffd7697240c802ca8fc80176a6ac10e8a7cdc0
+
