--- a/src/index.css
+++ b/src/index.css
@@ -1148,50 +1148,111 @@ body {
 }
 
 /* events page */
-.container-event img {
-
-	width: 30%;
-	height: 100%;
-	object-fit: cover;
-
-	
-	transform-origin: center;
-	transform: perspective(800px) rotateY(25deg);
-	transition: 0.5s;
-}
-
-.container-event {
-	max-width: 1000px;
-	max-height: 350px;
+:root{
+	--background-dark: black;
+	--text-light: rgba(255,255,255,0.6);
+	--text-lighter: rgba(255,255,255,0.9);
+	--spacing-s: 8px;
+	--spacing-m: 16px;
+	--spacing-l: 24px;
+	--spacing-xl: 32px;
+	--spacing-xxl: 64px;
+	--width-container: 1200px;
+  }
+  
+  
+  .hero-section{
+	align-items: flex-start;
 	display: flex;
-	flex-wrap: wrap;
+	min-height: 100%;
 	justify-content: center;
-	align-items: center;
-	gap: 30px;
-}
-
-.container-event:hover img {
-	opacity: 0.3;
-}
-
-.container-event img:hover {
-	transform: perspective(800px) rotateY(0deg);
-	opacity: 1;
-}
-
-.bodyevent {
-	width: 100%;
-	height: 100vh;
-	background-color: #000;
+	padding: var(--spacing-xxl) var(--spacing-l);
+	background: black;
+  }
+  
+  .card-grid{
 	display: grid;
-	place-items: center;
-}
+	grid-template-columns: repeat(2, 1fr);
+	max-width: var(--width-container);
+	width: 100%;
+	gap:30px;
+	background: black;
 
-.card-img-top {
-	height: 400px;
-	object-fit: cover;
-
-}
+  }
+  
+  @media(min-width: 540px){
+	.card-grid{
+	  grid-template-columns: repeat(2, 1fr); 
+	}
+  }
+  
+  @media(min-width: 960px){
+	.card-grid{
+	  grid-template-columns: repeat(4, 1fr); 
+	}
+  }
+  
+  .card_event{
+	list-style: none;
+	position: relative;
+	background: black;
+  }
+  
+  .card_event:before{
+	content: '';
+	display: block;
+	padding-bottom: 150%;
+	width: 100%;
+	
+  }
+  
+  .card__background{
+	background-size: cover;
+	background-position: center;
+	border-radius: var(--spacing-l);
+	bottom: 0;
+	filter: brightness(0.75) saturate(1.2) contrast(0.85);
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	transform-origin: center;
+	background-image: url(https://images.unsplash.com/photo-1675095524926-f1a8581615d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1528&q=80);
+	transform: scale(1) translateZ(0);
+	transition: 
+	  filter 200ms linear,
+	  transform 200ms linear;
+  }
+  
+  .card_event:hover .card__background{
+	transform: scale(1.05) translateZ(0);
+  }
+  
+  .card-grid:hover > .card_event:not(:hover) .card__background{
+	filter: brightness(1) saturate(0)  blur(3px);
+  }
+  
+  .card__content{
+	left: 0;
+	padding: var(--spacing-l);
+	position: absolute;
+	top: 0;
+  }
+  
+  .card__category{
+	color: var(--text-light);
+	font-size: 0.9rem;
+	margin-bottom: var(--spacing-s);
+	text-transform: uppercase;
+  }
+  
+  .card__heading{
+	color: var(--text-lighter);
+	font-size: 1.9rem;
+	text-shadow: 2px 2px 20px rgba(0,0,0,0);
+	line-height: 1.4;
+	word-spacing: 100vw;
+  }
 
 .modal-header {
 	border-color: white;
