--- a/src/index.css
+++ b/src/index.css
@@ -1375,3 +1375,25 @@ body {
 	z-index: -1;
 }
 
+/* about taqneeq */
+.main-tq{
+	width:100%;
+	height: 100vh;
+}
+.main-tq video{
+	width: 100%;
+	height: 100%;
+    object-fit: cover;
+}
+.Content-main-tq{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top:0;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   color:white;
+}
+  
