--- a/src/index.css
+++ b/src/index.css
@@ -1396,4 +1396,12 @@ body {
    align-items: center;
    color:white;
 }
+.overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.4);
+}
   
