--- a/src/index.css
+++ b/src/index.css
@@ -1246,12 +1246,29 @@ body {
   
   .card__heading{
 	color: var(--text-lighter);
-	font-size: 1.9rem;
+	font-size: vh;
 	text-shadow: 2px 2px 20px rgba(0,0,0,0);
 	line-height: 1.4;
 	word-spacing: 100vw;
   }
 
+  @media screen and (min-width: 601px) {
+	.card__heading {
+	  font-size: 4vh;
+	}
+	.card__category {
+		font-size: 3vh;
+	  }
+  }
+  
+  @media screen and (max-width: 600px) {
+	.card__heading {
+	  font-size: 2vh;
+	}
+	.card__category {
+		font-size: 2vh;
+	  }
+  }
 .modal-header {
 	border-color: white;
 }
